[Add] Login 및 Logout 기능 구현

--- a/src/common/colors.css
+++ b/src/common/colors.css
@@ -1,5 +1,6 @@
 @value makerBlack: black;
 @value makerWhite: white;
+@value makerOrange: #f88856;
 @value makerLightGrey: #e8e7e6;
 @value makerLightPink: #ffeae8;
 @value makerGrey: #626262;
